[project]
name = "simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libsumo>=1.26.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
